[gd_scene load_steps=36 format=3 uid="uid://cb8dld63hgqkj"]

[ext_resource type="Script" uid="uid://yaswdugcal5a" path="res://scenes/ui/ui.gd" id="1_nvly0"]
[ext_resource type="Texture2D" uid="uid://dwad8ugg8tvs2" path="res://scenes/ui/game_ui/border.png" id="2_vjxrc"]
[ext_resource type="Shader" uid="uid://dum7asi4x3gis" path="res://scenes/ui/posterise.gdshader" id="3_egwht"]
[ext_resource type="Texture2D" uid="uid://cj53tufwlw80h" path="res://scenes/ui/game_ui/fuel_empty.png" id="3_gc7ur"]
[ext_resource type="Texture2D" uid="uid://b0cxfseq7x005" path="res://scenes/ui/game_ui/fuel_border.png" id="4_8jg32"]
[ext_resource type="Texture2D" uid="uid://ck8jx8jowhs1f" path="res://scenes/ui/game_ui/fuel_full.png" id="5_3s8aq"]
[ext_resource type="FontFile" uid="uid://c1hpa04tng3qi" path="res://scenes/ui/Ranchers-Regular.ttf" id="6_xhr0k"]
[ext_resource type="Texture2D" uid="uid://bvocmvvmfrqyr" path="res://scenes/ui/game_ui/durability_1.png" id="7_hjaf2"]
[ext_resource type="Texture2D" uid="uid://bf31rmjofyhue" path="res://scenes/ui/game_ui/durability_2.png" id="8_3b87j"]
[ext_resource type="Texture2D" uid="uid://liowo62dneej" path="res://scenes/ui/game_ui/durability_3.png" id="9_8kkbn"]
[ext_resource type="Texture2D" uid="uid://cbrwpsgtckpng" path="res://scenes/ui/game_ui/durability_4.png" id="10_r5kob"]
[ext_resource type="Texture2D" uid="uid://c7alyfmkffa0o" path="res://scenes/ui/game_ui/money_1.png" id="11_egwht"]
[ext_resource type="Texture2D" uid="uid://cdvq0it55eq56" path="res://scenes/ui/game_ui/money_2.png" id="12_msipi"]
[ext_resource type="Script" uid="uid://bgx13csjkcgm6" path="res://scenes/ui/upgrade_ui/start_buy_btn.gd" id="13_gc7ur"]
[ext_resource type="Script" uid="uid://b2ly8jfqp50c5" path="res://scenes/ui/controls/signal_btn.gd" id="14_8jg32"]
[ext_resource type="Script" uid="uid://boqb36dldxvtd" path="res://scenes/ui/upgrade_ui/upgrade_btn_spawner.gd" id="14_gc7ur"]
[ext_resource type="Texture2D" uid="uid://bode2fx2vmuvw" path="res://scenes/ui/controls/btn_1.png" id="14_hjaf2"]
[ext_resource type="Texture2D" uid="uid://bt56hiqqwdvap" path="res://scenes/ui/controls/btn_0.png" id="14_xhr0k"]
[ext_resource type="Texture2D" uid="uid://b5mt7cpy4uvom" path="res://scenes/ui/controls/btn_2.png" id="15_3b87j"]
[ext_resource type="Script" uid="uid://bru6pa7ggs1e4" path="res://scenes/ui/upgrade_ui/stats.gd" id="16_3s8aq"]
[ext_resource type="PackedScene" uid="uid://dkrvuap5myfeg" path="res://scenes/ui/upgrade_ui/upgrade_btn.tscn" id="20_8kkbn"]
[ext_resource type="Resource" uid="uid://bp5a48ea187oe" path="res://scenes/lawn_mower/prefabs/sitting_mower/sitting_mower.tres" id="20_r5kob"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_msipi"]
shader = ExtResource("3_egwht")
shader_parameter/mix_amount = 0.0
shader_parameter/use_l = true
shader_parameter/use_c = true
shader_parameter/use_h = true
shader_parameter/steps_l = 50.0
shader_parameter/level_c = 6.0
shader_parameter/level_h = 0.05

[sub_resource type="LabelSettings" id="LabelSettings_opqoc"]
font = ExtResource("6_xhr0k")
font_size = 24
shadow_color = Color(0, 0, 0, 0.768627)
shadow_offset = Vector2(4, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_miq82"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_hjaf2")
}, {
"duration": 1.0,
"texture": ExtResource("8_3b87j")
}, {
"duration": 1.0,
"texture": ExtResource("9_8kkbn")
}, {
"duration": 1.0,
"texture": ExtResource("10_r5kob")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_bpcsf"]
font = ExtResource("6_xhr0k")
font_size = 32
shadow_color = Color(0, 0, 0, 0.768627)
shadow_offset = Vector2(4, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_bpcsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_egwht")
}, {
"duration": 1.0,
"texture": ExtResource("12_msipi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3b87j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8kkbn"]
texture = ExtResource("15_3b87j")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hjaf2"]
texture = ExtResource("14_hjaf2")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3b87j"]
texture = ExtResource("14_xhr0k")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_3b87j"]
font = ExtResource("6_xhr0k")
font_size = 24
font_color = Color(0.757198, 0.761105, 0.776745, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8kkbn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5kob"]

[sub_resource type="LabelSettings" id="LabelSettings_3s8aq"]
font = ExtResource("6_xhr0k")
font_size = 51

[node name="GameUi" type="CanvasLayer"]
script = ExtResource("1_nvly0")

[node name="Border" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.901961)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vjxrc")
expand_mode = 5

[node name="Posterise" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_msipi")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Game" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fuel" type="TextureProgressBar" parent="Game"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_right = 234.0
offset_bottom = 71.0
grow_horizontal = 2
size_flags_horizontal = 0
max_value = 10.0
step = 0.01
texture_under = ExtResource("3_gc7ur")
texture_over = ExtResource("4_8jg32")
texture_progress = ExtResource("5_3s8aq")

[node name="FuelLabel" type="Label" parent="Game/Fuel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 59.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "Fuel: 100"
label_settings = SubResource("LabelSettings_opqoc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Durability" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="DurabilityVisual" type="AnimatedSprite2D" parent="Durability"]
position = Vector2(104, -24)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_miq82")

[node name="DurabilityLabel" type="Label" parent="Durability"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -67.0
offset_right = 121.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "100%"
label_settings = SubResource("LabelSettings_bpcsf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="MoneyVisual" type="AnimatedSprite2D" parent="Money"]
position = Vector2(-48, -48)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_bpcsf")

[node name="MoneyLabel" type="Label" parent="Money"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -68.0
offset_right = 10.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "$0"
label_settings = SubResource("LabelSettings_bpcsf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeBtns" type="VBoxContainer" parent="Upgrade"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 42.0
offset_right = 325.0
grow_vertical = 2
alignment = 1
script = ExtResource("14_gc7ur")

[node name="StartBtn" type="Button" parent="Upgrade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 192.0
offset_right = 66.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_3b87j")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8kkbn")
theme_override_styles/hover = SubResource("StyleBoxTexture_hjaf2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8kkbn")
theme_override_styles/normal = SubResource("StyleBoxTexture_3b87j")
script = ExtResource("13_gc7ur")

[node name="Label" type="Label" parent="Upgrade/StartBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"
label_settings = SubResource("LabelSettings_3b87j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextBtn" type="Button" parent="Upgrade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 268.0
offset_top = 213.0
offset_right = 432.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_8kkbn")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8kkbn")
theme_override_styles/hover = SubResource("StyleBoxTexture_hjaf2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8kkbn")
theme_override_styles/normal = SubResource("StyleBoxTexture_3b87j")
script = ExtResource("14_8jg32")
signal_name = "next_mower"

[node name="Label" type="Label" parent="Upgrade/NextBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Next"
label_settings = SubResource("LabelSettings_3b87j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviousBtn" type="Button" parent="Upgrade"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -409.0
offset_top = 213.0
offset_right = -245.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_r5kob")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8kkbn")
theme_override_styles/hover = SubResource("StyleBoxTexture_hjaf2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8kkbn")
theme_override_styles/normal = SubResource("StyleBoxTexture_3b87j")
script = ExtResource("14_8jg32")
signal_name = "previous_mower"

[node name="Label" type="Label" parent="Upgrade/PreviousBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Previous"
label_settings = SubResource("LabelSettings_3b87j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="VBoxContainer" parent="Upgrade"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -349.0
offset_top = 1.0
offset_right = -25.0
offset_bottom = 1081.0
grow_horizontal = 0
alignment = 1
script = ExtResource("16_3s8aq")
best_mower = ExtResource("20_r5kob")

[node name="RepairBtn" parent="Upgrade" instance=ExtResource("20_8kkbn")]
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -121.0
offset_bottom = -73.0
grow_vertical = 0
upgrade_type = 0

[node name="End" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="End"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="End"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "YOU LOST"
label_settings = SubResource("LabelSettings_3s8aq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="End"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = 213.0
offset_right = 126.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_8kkbn")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8kkbn")
theme_override_styles/hover = SubResource("StyleBoxTexture_hjaf2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8kkbn")
theme_override_styles/normal = SubResource("StyleBoxTexture_3b87j")
script = ExtResource("14_8jg32")
signal_name = "reset_game"

[node name="Label" type="Label" parent="End/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"
label_settings = SubResource("LabelSettings_3b87j")
horizontal_alignment = 1
vertical_alignment = 1
